--- a/frontend/css/index-design.css
+++ b/frontend/css/index-design.css
@@ -1,20 +1,23 @@
-body
-{
+
+body {
     background-color: aqua;
     margin: 0%;
 }
 
-.flex-container
-{
+.flex-container {
     background-color: aquamarine;
     height: 60px;
     flex-flow: nowrap;
     padding: 10px;
-}   
+}
 
-.button
-{   
+.button {
     border-radius: 10px;
     background-color: rgb(135, 211, 209);
     font-size: large;
+}
+
+iframe {
+    padding: 15px;
+    border-radius: 30px;
 }
