still doesn't work - moveable picture

--- a/frontend/components/Szene_01_Gasse/index.html
+++ b/frontend/components/Szene_01_Gasse/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szene-01-Gasse</title>
+    <link rel="stylesheet" href="../../core/scene01.css">
     <script src="../../modules/moveable-background.js"></script>
 </head>
 <body>
-    <img src="../../assets/images/szene1-test.jpg" height="1000px" id="backgroung-image">
+    <img src="../../assets/images/szene1-test.jpg" id="moveable-image">
 </body>
 </html>
