Now it works with the moveable background

--- a/frontend/components/Szene_01_Gasse/index.html
+++ b/frontend/components/Szene_01_Gasse/index.html
@@ -9,6 +9,6 @@
     <script src="../../modules/moveable-background.js"></script>
 </head>
 <body>
-    <img src="../../assets/images/szene1-test.jpg" id="moveable-image">
+<img src="../../assets/images/szene1-test.jpg">
 </body>
 </html>
