--- a/frontend/components/Szene_01_Gasse/test.html
+++ b/frontend/components/Szene_01_Gasse/test.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="../../core/scene01.css">
 <html>
-<style>
-#mydiv {
-  position: absolute;
-    height: 100%;
-    cursor: move;
-}
-
-</style>
 <body>
 <div id="mydiv">
+  <button id="posBut"><a href="http://test.de">/\</a></button>
   <img src="../../assets/images/szene1-test.jpg" height="100%">
 </div>
 
