--- a/frontend/components/Szene_01_Gasse/index.html
+++ b/frontend/components/Szene_01_Gasse/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szene-01-Gasse</title>
-    <link rel="stylesheet" href="../../core/scene01.css">
-    <script src="../../modules/moveable-background.js"></script>
 </head>
 <body>
-<img src="../../assets/images/szene1-test.jpg">
+    <iframe src="/frontend/components/Szene_01_Gasse/test.html" frameborder="0" width="2000" height="800"></iframe>
 </body>
 </html>
