--- a/frontend/components/Szene_01_Gasse/test.html
+++ b/frontend/components/Szene_01_Gasse/test.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="../../core/scene01.css">
+<link rel="stylesheet" href="/frontend/core/scene01.css">
 <html>
 <body>
 <div id="mydiv">
   <button id="posBut"><a href="http://test.de">/\</a></button>
-  <img src="../../assets/images/szene1-test.jpg" height="100%">
+  <img src="/frontend/assets/images/szene1-test.jpg" height="100%">
 </div>
 
 <script>
