--- a/frontend/core/style.css
+++ b/frontend/core/style.css
@@ -1,5 +1,11 @@
-nav {
-    padding: 25px;
+@import url("colors.css");
+
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
 }
 
-#start
+nav {
+    padding: 5px 25px;
+    background-color: var(--primary-col);
+}
