--- a/frontend/components/chat.html
+++ b/frontend/components/chat.html
@@ -1,4 +1,4 @@
-<div class="screen">
+<div class="chat">
 
 <img src="/frontend/assets/images/whatsapp_chat_oben.png" alt="">
 <img id="chat-main" src="/frontend/assets/images/whatsapp_chat_ohne_oben-unten.png" alt="">
