--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -2,5 +2,6 @@
     <h1>Asg-Passau Escape Room</h1>
     <div id="scene-sel">
         <button></button>
+        <button></button>
     </div>
 </nav>
