--- a/frontend/core/style.css
+++ b/frontend/core/style.css
@@ -8,11 +8,12 @@ nav {
 
 #scene-sel {
     background-color: aquamarine;
+    flex-grow: 1;
 }
 
 #scene-sel > * {
-    width: 50px;
     height: 50px;
+    margin: 5px;
 }
 
 .screen {
