--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -1,7 +1,7 @@
 <nav>
     <h1>Asg-Passau Escape Room</h1>
     <div id="scene-sel">
-        <button></button>
-        <button></button>
+        <button>Scene 1</button>
+        <button>Scene 2</button>
     </div>
 </nav>
