--- a/frontend/core/style.css
+++ b/frontend/core/style.css
@@ -46,7 +46,7 @@
     top: auto;
 }
 
-.screen > *:nth-child(-n + 2) {
+.screen:nth-child( -n + 2) {
     top: 0px;
     width: 100%;
     position: sticky;
