we need more bugs

--- a/frontend/components/Szene_01_Gasse/scene01.css
+++ b/frontend/components/Szene_01_Gasse/scene01.css
@@ -5,7 +5,7 @@
   }
 
 #forward {
-    margin-left: 2100px;
+    margin-left: 63%;
     margin-top: 200px;
     color: rgb(163, 162, 162);
     background-color: rgb(255, 254, 254);
