--- a/frontend/components/Szene_01_Gasse/scene01.css
+++ b/frontend/components/Szene_01_Gasse/scene01.css
@@ -6,7 +6,7 @@
 
 #forward {
     margin-left: 63%;
-    margin-top: 200px;
+    margin-top: 10%;
     color: rgb(163, 162, 162);
     background-color: rgb(255, 254, 254);
     border-color: white;
