burgi macht die jetzt mal die viecher raus

--- a/components/scene_sel.html
+++ b/components/scene_sel.html
@@ -17,21 +17,7 @@
 </style>
 <div id="scene-sel">
 
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-    <span>Szene1</span>
-
 </div>
+<script type="module">
+    
+</script>
