Szene_01_Gasse streetview done

--- a/frontend/components/Szene_01_Gasse/index.html
+++ b/frontend/components/Szene_01_Gasse/index.html
@@ -4,7 +4,9 @@
 <html>
 <body>
 <div id="mydiv">
-  <button id="forward">/\</a></button>
+  <button id="inter">-|</button>
+  <button id="backward">/\<p>|</p></button>
+  <button id="forward">/\</button>
   <img src="/frontend/assets/images/Szene01/Theresienstraße_1.jpg" height="100%" id="background">
 </div>
 </body>
