--- a/components/Szene_01_Gasse/index.html
+++ b/components/Szene_01_Gasse/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/frontend/core/scene01.css">
+<link rel="stylesheet" href="/core/scene01.css">
 <html>
 <body>
 <div id="mydiv">
   <button id="posBut" onclick="changePhotof">/\</a></button>
-  <img src="/frontend/assets/images/szene1-test.jpg" height="100%" id="background">
+  <img src="/assets/images/szene1-test.jpg" height="100%" id="background">
 </div>
 
 <script>
@@ -47,8 +47,8 @@ function dragElement(elmnt) {
 function changePhotof(){
   position = position+1;
   let pic = pictures[position];
-  var change = "/frontend/assets/images/Szene01/" + pos;
-  document.getElementById("background").src="/frontend/assets/images/Szene01/Theresienstraße_1.jpg";
+  var change = "/assets/images/Szene01/" + pos;
+  document.getElementById("background").src="/assets/images/Szene01/Theresienstraße_1.jpg";
 }
 </script>
 
