--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,7 @@
-<nav>
-    <h1>Asg-Passau Escape Room</h1>
-</nav>
+<style>
+    h1 {
+        background-color: var(--primary-col);
+        padding: 15px;
+    }
+</style>
+<h1>Asg-Passau Escape Room</h1>
