--- a/components/scene02.html
+++ b/components/scene02.html
@@ -1,6 +1,11 @@
-<p>Hallo World!</p>
-<ul>
-    <p>one</p>
-    <p>two</p>
-    <p>three</p>
-</ul>
+<style>
+    #img-room-desk {
+        height: 100%;
+        display: block;
+        margin: auto;
+    }
+</style>
+<img id="img-room-desk" src="/assets/images/Room-Desk.png" alt="Home with desktop" usemap="#room-desk-map">
+<map name="room-desk-map">
+    <area id="area-open-pc" coords="134,362,900,692" shape="rect">
+</map>
