wir haben im main.js gezaubert (maybe)

--- a/components/Szene_05_Haus_außen/index.html
+++ b/components/Szene_05_Haus_außen/index.html
@@ -1,6 +1,39 @@
-<div>
-    <img src="/frontend/assets/images/Szene_05_Haus_außen/HausFertig.png" alt="" usemap="#image-map" id="HausFertig">
+<!-- <div>
+    <img src="/assets/images/Szene_05_Haus_außen/HausFertig.png" alt="" usemap="#image-map" id="HausFertig">
     <map name="image-map">
         <area id="screen-interact" target="" alt="" title="" href="" coords="453,741,453,557,474,535,503,524,521,524,537,531,548,542,561,557,561,591,559,631,559,667,558,708,556,742" shape="poly">
     </map>
-</div>
+</div> -->
+
+<style>
+    #tuer {
+        width: 100vw;
+        /* width: min(calc(100vh - 65px), 100vw); */
+        display: block;
+        margin: auto;
+        height: 100%;
+        top: -200px;
+
+    }
+</style>
+
+    <svg id="tuer" viewBox="0 0 939 625.76">
+        <image href="/assets/images/Szene_05_Haus_außen/HausFertig.png" alt="Tuer des Hauses" width="100%"></image>
+        <rect
+        fill-opacity="00"
+        width="100"
+        height="165"
+        x="320"
+        y="385"
+        id="area-open-tuer"
+        />
+        <rect
+        fill-opacity="00"
+        width="100"
+        height="150"
+        x="325"
+        y="100"
+        id="area-open-kreuz"
+        />
+    </svg>
+
