added blur effect for everything exept for the  opened area

--- a/components/schloss.html
+++ b/components/schloss.html
@@ -5,10 +5,11 @@
         top : 50vh;
         left: 50vw;
         transform: translate(-50%, -50%);
+        z-index: 500;
     }
     #schloss {
         height: min(calc(100vh - 20px), calc(100vw - 20px));
-    }
+}
 </style>
 <div id="schloss-container">
     <img id="schloss" src="/assets/images/Szene_05_Haus_außen/Tür.png" alt="" srcset="">
