--- a/components/scene-sel.html
+++ b/components/scene-sel.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <style>
-    #scene-sel {
+    #scene-sel-con {
+        margin-top: 5px;
         display: flex;
         overflow: scroll;
     }
 
-    #scene-sel>* {
+    #scene-sel-con > * {
         background-color: var(--secondary-col);
         flex-grow: 1;
         padding: 5px 0px;
@@ -15,10 +16,7 @@
         font-size: larger;
     }
 </style>
-<div id="scene-sel">
+<div id="scene-sel-con">
     <button>hi</button>
     <button>lol</button>
 </div>
-<script type="module">
-    
-</script>
