--- a/core/style.css
+++ b/core/style.css
@@ -4,6 +4,10 @@
     color: black;
 }
 
+body {
+    background-image: linear-gradient(to bottom, #9c4444, #222 20%)
+}
+
 #scene {
     display: block;
     height: calc(100vh - 70px);
