--- a/core/style.css
+++ b/core/style.css
@@ -5,19 +5,15 @@
 }
 
 body {
-    background-image: linear-gradient(to bottom, #9c4444, #222 20%)
+    background-image: linear-gradient(to bottom, var(--secondary-col) 75px, #222 150px)
 }
 
 #scene {
     display: block;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 115px);
 }
 
 map {
     background-color: aquamarine;
     z-index: 100;
 }
-/* 
-#scene > *:not(#schloss-container) {
-    filter: blur(3px);
-}   */
