--- a/components/scene-sel.html
+++ b/components/scene-sel.html
@@ -16,7 +16,4 @@
         font-size: larger;
     }
 </style>
-<div id="scene-sel-con">
-    <button>hi</button>
-    <button>lol</button>
-</div>
+<div id="scene-sel-con"></div>
