--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,20 @@
 <style>
     h1 {
+        display: inline;
+    }
+    #pw-con {
+        padding: 10px;
+        display: inline;
+        float: right;
+    }
+    #header-con {
         background-color: var(--primary-col);
-        padding: 15px;
     }
 </style>
+<div id="header-con">
 <h1>Asg-Passau Escape Room</h1>
+    <div id="pw-con">
+        <label for="pw-input">Password:</label>
+        <input type="text" name="pw-input" id="pw-input">
+    </div>    
+</div>
