--- a/components/Szene_01_Gasse/index.html
+++ b/components/Szene_01_Gasse/index.html
@@ -9,7 +9,7 @@
   <button id="backward">/\<p>|</p></button>
   <button id="forward">/\</button>
   <button id="show-map">(O)</button>
-  <img src="/assets/images/Szene01/Theresienstraße_1.jpg" height="100%" id="background">
+  <img src="/assets/images/Szene01/Rosengasse_1.jpg" height="100%" id="background">
   <img src="/assets/images/Szene01/Passau_Stadtplan_Karte_Raster_mit_Beschriftung.png" id="map">
   <button id="leavebut">Verlassen</button>
 </div>
